<resources>
    <string name="app_name">WSS_2000</string>
    <string-array name="meaMode">
        <item>连续模式</item>
        <item>周期模式</item>
        <item>定点模式</item>
        <item>受控模式</item>
        <item>手动模式</item>
    </string-array>
    <string-array name="range">
        <item>量程_1</item>
        <item>量程_2</item>
        <item>量程_3</item>
    </string-array>
    <string-array name="reserve">
        <item>未配置</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="component">组份</string>
    <string name="measurement_value">测量值</string>
    <string name="energy">能量</string>
    <string name="printing">正在打印数据…</string>
    <string name="cancel">取消</string>
    <string name="working_condition">工作状态</string>
    <string name="sure">确定</string>
    <string name="combination_test">组合测试</string>
    <string name="display_mea_absorb">测量能量： ——————</string>
    <string name="display_before_mea">上次测量： ——————</string>
    <string name="display_use_range">使用量程： ——————</string>
    <string name="display_current_status">当前状态： 等待指令</string>
    <string name="display_current_action">当前动作： ——————</string>
    <string name="display_next_action">下一动作： ——————</string>
    <string name="display_steps_left">剩余步骤： ——————</string>
    <string name="display_sample_model">测量模式： ——————</string>
    <string name="display_digestion_temperature">消解管温度： ——————</string>
    <string name="display_restart_time">再启动时间： ——————</string>
    <string name="low_high">低/高</string>
    <string name="water_pump">水泵</string>
    <string name="pump">蠕动泵</string>
    <string name="measuring_module">计量模块</string>
    <string name="digestion_Tube">消解管</string>
    <string name="leakage_detection">漏液检测</string>
    <string name="afterJobUseRange">再启动量程： ——————</string>
    <string name="configFlowStarted">配置流程已启动（关联做样）</string>
    <string name="waterDevicesName">水质在线自动分析仪</string>
    <string name="SDZY">手动做样</string>
    <string name="LYCL">零样测量</string>
    <string name="GLCX">管路冲洗</string>
    <string name="SDJZ">手动校准</string>
    <string name="BYCL">标样1测量</string>
    <string name="YBQX">仪表清洗</string>
    <string name="BY2CL">标样2测量</string>
    <string name="CSZY">初始装液</string>
    <string name="ZY">做样</string>
    <string name="XSJZ">稀释校准</string>
    <string name="LDHC">零点核查</string>
    <string name="KDHC">跨度核查</string>
    <string name="JBHS">加标回收</string>
    <string name="PXY">平行样</string>
    <string name="BYHC">标样核查</string>
    <string name="B1">标1</string>
    <string name="B2">标2</string>
    <string name="B3">标3</string>
    <string name="B4">标4</string>
    <string name="JZ">校准</string>
    <string name="GYWDX">光源稳定性</string>
    <string name="JYWDX">进样稳定性</string>
    <string name="CHJZS">催化剂再生</string>
    <string name="tankTemperature">水箱温度</string>
    <string name="meterBoxTemperature">仪表箱温度</string>
    <string name="unitT">℃</string>
    <string name="unitHour">时</string>
    <string name="unitMin">分</string>
    <string name="unitSec">秒</string>
    <string name="unitMl">ml</string>
    <string name="autoJob">自动做样</string>
    <string name="displayAutoJob">自动做样</string>
    <string name="displayManualJob">手动做样</string>
    <string name="continuousMea">连续测量</string>
    <string name="cycleMea">周期测量</string>
    <string name="intervalTime">间隔时间</string>
    <string name="startTime">启动时间</string>
    <string name="devProtectTile">水质分析仪售后服务信息</string>
    <string name="beforeMeaData">上次测量值</string>
    <string name="Pressure_CorrK">压力校正系数K</string>
    <string name="Pressure_CorrB">压力校正系数B</string>
    <string-array name="runningMode">
        <item>在线</item>
        <item>离线</item>
        <item>维护</item>
    </string-array>
    <string name="name">名称</string>
    <string name="waiting_for_instructions">等待指令</string>
    <string name="ready">准备</string>
    <string name="normal">正常</string>
    <string name="span_1">标1</string>
    <string name="span_2">标2</string>
    <string name="measure">测量</string>
    <string name="realTime">实时</string>
    <string name="infusionTest">抽液测试</string>
    <string name="drainageTest">排液测试</string>
    <string-array name="dilutionMode">
        <item>模式—</item>
        <item>模式二</item>
        <item>模式三</item>
    </string-array>
    <string name="measureLimit">测量指标超</string>
    <string name="error">错误</string>
    <string name="warning">警告</string>
    <string name="selfCheck">自检中</string>
    <string name="clean">清洗</string>
    <string name="exceptionHandling">异常处理</string>
    <string name="exceptionHandling2">异常处理2</string>
    <string name="dilutionCal">稀释校准</string>
    <string name="FlowingNumberSupermax">流程编号不能超过62</string>
    <string name="sendFlowing">正为您下发流程…</string>
    <string name="sendFlowError">流程下发异常，请检查设备!</string>
    <string name="sendFlowSucceed">流程下发已完成，建议您10秒后重启确认!</string>
    <string name="sendFlowCrcFail">流程验证失败，请尝试重发!</string>
    <string name="flowCrcFuncFail">流程验证功能不可用，建议升级核心控制板软件!</string>
    <string name="locFlowCrc">本地校验</string>
    <string name="recFlowCrc">接收校验</string>
    <string name="readyStarted">准备开始_</string>
    <string name="pleaseWaiting">请等待…</string>
    <string name="digestionTemper">消解温度</string>
    <string name="digestionTimer">消解时长</string>
    <string name="colorTemper">显色温度</string>
    <string name="colorTimer">显色时长</string>
    <string name="dispellingCooling">消解降温</string>
    <string name="colorCooling">显色降温</string>
    <string name="colorStand">显色静置</string>
    <string name="waitingStand">等待静置</string>
    <string name="distillTubeTemper">蒸馏管温度</string>
    <string name="distillTimer">蒸馏时长</string>
    <string name="calibrationDigestionTempe">校准消解温度</string>
    <string name="calibrationDigestionTime">校准消解时长</string>
    <string name="waterVolume">水样体积</string>
    <string name="oxidantVolume">氧化剂体积</string>
    <string name="reducingVolume">还原剂体积</string>
    <string name="reducingCoc">还原剂浓度</string>
    <string name="titrationVolume">滴定液体积</string>
    <string name="catalystVolume">催化剂体积</string>
    <string name="bufferVolume">缓冲剂体积</string>
    <string name="reagentVolume">显色剂体积</string>
    <string name="bufferRinseVolume">缓冲剂冲洗体积</string>
    <string name="reagentRinseVolume">显色剂冲洗体积</string>
    <string name="catalystRinseVolume">催化剂冲洗体积</string>
    <string name="distill_temper_is_set_error">设置的蒸馏温度有误</string>
    <string name="distill_temper_is_empty">设置的蒸馏温度不能为空</string>
    <string name="distill_timer_is_set_error">设置的蒸馏时长有误</string>
    <string name="distill_timer_is_empty">设置的蒸馏时长不能为空</string>
    <string name="digestion_temper_is_set_error">设置的消解温度有误</string>
    <string name="digestion_temper_is_empty">设置的消解温度不能为空</string>
    <string name="digestion_timer_is_set_error">设置的消解时长有误</string>
    <string name="digestion_timer_is_empty">设置的消解时长不能为空</string>
    <string name="color_temper_is_set_error">设置的显色温度有误</string>
    <string name="color_temper_is_empty">设置的显色温度不能为空</string>
    <string name="color_timer_is_set_error">设置的显色时长有误</string>
    <string name="color_timer_is_empty">设置的显色时长不能为空</string>
    <string name="dispelling_cooling_is_set_error">设置的消解降温有误</string>
    <string name="dispelling_cooling_is_empty">设置的消解降温不能为空</string>
    <string name="color_cooling_is_set_error">设置的显色降温有误</string>
    <string name="color_cooling_is_empty">设置的显色降温不能为空</string>
    <string name="color_stand_is_set_error">设置的显色静置有误</string>
    <string name="color_stand_is_empty">设置的显色静置不能为空</string>
    <string name="set_meaPar">设置的</string>
    <string name="is_set_empty">不能为空</string>
    <string name="is_set_error">有误</string>
    <string name="wait_stand_is_set_error">设置的等待静置有误</string>
    <string name="wait_stand_is_empty">设置的等待静置不能为空</string>
    <string name="burning_temperature_is_set_error">设置的燃烧温度有误</string>
    <string name="burning_temperature_is_empty">设置的燃烧温度不能为空</string>
    <string name="titration_volume_is_set_error">设置的滴定液体积有误</string>
    <string name="titration_volume_is_empty">设置的滴定液体积不能为空</string>
    <string name="reductant_coc_is_set_error">设置的还原剂浓度有误</string>
    <string name="reductant_coc_is_empty">设置的还原剂浓度不能为空</string>
    <string name="reductant_volume_is_set_error">设置的还原剂体积有误</string>
    <string name="reductant_volume_is_empty">设置的还原剂体积不能为空</string>
    <string name="water_volume_is_set_error">设置的水样体积有误</string>
    <string name="water_volume_is_empty">设置的水样体积不能为空</string>
    <string name="the_oxidizer_must_not_be_empty">设置的氧化剂体积不能为空</string>
    <string name="the_size_of_the_oxidizer_is_not_correct">设置的氧化剂体积有误</string>
    <string name="catalyst_volume_is_set_error">设置的催化剂体积有误</string>
    <string name="catalyst_volume_is_empty">设置的催化剂体积不能为空</string>
    <string name="exception">异常</string>
    <string name="set_standard_sample_to_same_coc">设置标样浓度相同!</string>
    <string name="set_rtu2018_id_exception">很抱歉当前设置ID 同其他因子设置ID 冲突! 请检查后重新设置!</string>
    <string name="high_alarm">报警上限</string>
    <string name="low_alarm">报警下限</string>
    <string name="inputParException">输入参数有误请重新确认！</string>
    <string name="make_sure_the_reagent_bottle">确定已经装满试剂？</string>
    <string name="make_sure_the_container_empty">确定已经清空废液桶？</string>
    <string name="failed_find_action_command">未从动作表找到对应命令！</string>
    <string name="device_temper_to_high">设备消解管温度高于</string>
    <string name="temper_unit">度</string>
    <string name="startReceive">开始接收</string>
    <string name="stopReceive">停止接收</string>
    <string name="sendingArea">发送区</string>
    <string name="receivingArea">接收区</string>
    <string name="forInstrument">数采仪</string>
    <string name="make_sure_recovery_history">确定恢复历史数据？</string>
    <string name="error_data">数据错误！</string>
    <string name="recovery_successful">恢复成功！</string>
    <string name="recovery_failed">恢复失败！</string>
    <string name="restore_successful">还原成功！</string>
    <string name="restore_failed">还原失败！</string>
    <string name="uart">串口</string>
    <string name="TCP">TCP</string>
    <string name="TCP1">输出一</string>
    <string name="TCP2">输出二</string>
    <string name="TCP3">输出三</string>
    <string name="outputTest">输出测试</string>
    <string name="inputTest">输入测试</string>
    <string-array name="channel">
        <item>1#开关量输入</item>
        <item>2#开关量输入</item>
        <item>1#模拟量输入</item>
        <item>2#模拟量输入</item>
    </string-array>
    <string name="please_Configure">请配置</string>
    <string name="sorry_input_data_not_normative">抱歉，输入的数据不符合规范.</string>
    <string name="notSet">未设置</string>
    <string name="device_no_job">设备暂停工作,请联系设备厂商!</string>
    <string name="infusion">抽液</string>
    <string name="isBussy">"仪器非空闲状态!"</string>
    <string name="liquid_detection_value_is_set_error">设置的液体检测值有误</string>
    <string name="liquid_detection_value_is_empty">设置的液体检测值不能为空</string>
    <string name="please_set_the_titration_speed">请设置滴定转速!</string>
    <string name="please_confirm_the_range_input_par">请确认输入参数范围</string>
    <string name="setting_par_zero_unallowed">参数不可设置为零!</string>
    <string name="set_factory_settings">是否要设置出厂设置？</string>
    <string name="restore_factory_settings">是否要恢复出厂设置？</string>
    <string name="clear_all_running_records">是否要清除所有运行记录？</string>
    <string name="clear_all_cal_records">是否要清除所有校准记录？</string>
    <string name="analog_test">模拟量测试</string>
    <string name="output_test">输出测试</string>
    <string name="channel_1">通道1</string>
    <string name="digital_out_test">数字量测试</string>
    <string name="sending">发送</string>
    <string name="CK_A">核心控制板</string>
    <string name="CK_B">泵阀控制板</string>
    <string name="measure_board">磁导计量板</string>
    <string name="metering_board">计量模块板</string>
    <string name="orp_board">ORP电极板</string>
    <string name="runningBoard">安卓运行板</string>
    <string name="IO_board">安卓通讯板</string>
    <string name="outPut1">输出一</string>
    <string name="hex">hex</string>
    <string name="ma">mA</string>
    <string name="rs232">RS232</string>
    <string name="protocolTest">协议测试</string>
</resources>